SGFD-17198 - account dropdown fixed on mobile

--- a/src/Volo/FrontendBundle/Resources/public/css/partial/account-dropdown.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/partial/account-dropdown.scss
@@ -10,6 +10,10 @@
     border-bottom: 1px solid $dropdown-border;
   }
 
+  .dropdown-backdrop {
+    position: static;
+  }
+
   .dropdown-menu {
     margin-top: 30px;
     left: -2px;
